Change title and heading of popup

--- a/source/popup.html
+++ b/source/popup.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>GTmetrix Analyzer</title>
+    <title>Ecoify</title>
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
+    <h1>Ecoify your browsing!</h1>
     <button id="checkPage">Check this page now!</button>
   </body>
 </html>
