added montserrat font

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="container saved">
-        <a id="saved">20g CO2 saved!</a>
+        <a id="saved"><span id="carbon_grams"></span>g CO2 saved!</a>
       </div>
 
       <div class="container settings">
