toggleling adds and removes the webrequest event listener

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <div class="branding">Ecoify your browsing!</div>
+    <div class="branding"><span id="headline">Ecoify your browsing!</span></div>
 
     <div class="content">
 
