--- a/source/assets/info.html
+++ b/source/assets/info.html
@@ -25,6 +25,13 @@
       open the page directly for you - while also saving your time and reducing your C0<sub>2</sub> emissions!
     </p>
   </div>
+  <footer id='footer'>
+    <small>
+    <p>Credits:</p>
+    <p>world by Arafat Uddin from the Noun Project</p>
+    <p>icons by FontAwesome (https://fontawesome.com/license)</p>
+    </small>
+  </footer>
 </body>
 
 </html>
