--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -37,6 +37,14 @@
 
     </div>
 
+    <div class="settings editor" id="editor">
+        <form id="save_editor">
+          <textarea id="editor_content" name="message" rows="10" cols="30">The cat was playing in the garden.</textarea>
+          <br>
+          <input type="submit">
+        </form>
+    </div>
+
 
   </body>
 </html>
