--- a/source/assets/info.html
+++ b/source/assets/info.html
@@ -33,10 +33,17 @@
       CO<sub>2</sub> emissions!
     </p>
   </div>
-  <footer id='footer'>
+  <footer class='footer'>
     <small>
-    <p>Credits:</p>
-    <p>icons by Arafat Uddin from the <a href="https://thenounproject.com">Noun Project</a> and <a href="https://fontawesome.com/license">FontAwesome</a></p>
+      <p>
+        Conceived, designed, and implemented at <a href="https://hackhpi.org">HackHPI</a> 2018.
+      </p>
+      <p>
+        Team: <a href="mailto:simon.siegert@student.hpi.de">Simon Siegert</a>, <a href="mailto:finn.klessascheck@student.hpi.de">Finn Klessascheck</a>, <a href="mailto:a.begehr@fu-berlin.de">Anton Begehr</a>
+      </p>
+      <p>
+        Icons by Arafat Uddin from the <a href="https://thenounproject.com">Noun Project</a> and <a href="https://fontawesome.com/license">FontAwesome</a>
+      </p>
     </small>
   </footer>
 </body>
