[WIP] Do more of not fixing things

--- a/source/popup/popup.html
+++ b/source/popup/popup.html
@@ -41,7 +41,7 @@
         <form id="save_editor">
           <textarea id="editor_content" name="message" rows="10" cols="30">The cat was playing in the garden.</textarea>
           <br>
-          <input type="submit">
+          <input id="save_editor_button "type="submit">
         </form>
     </div>
 
