added Github Ribbon to info

--- a/source/assets/info.html
+++ b/source/assets/info.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <a href="https://github.com/ecoify/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a>
   <div>
 
     <svg class="icon" height='200' width='200' fill="#70C041" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve"><g><path d="M11.983,8.992c0.091-0.079,0.182-0.159,0.274-0.237C12.165,8.833,12.074,8.913,11.983,8.992z"></path><path d="M45.367,18.868c-0.039-0.68-0.86-0.939-1.426-1.236c0.029-0.625,0.195-0.132,0.156-0.735   c-0.195-0.008-0.312-0.039-0.498,0.039c-0.439,0.195-0.195,0.251-0.195,0.321c0.02,0.336,0.44-0.07-0.01,0.345   c-0.127,0.109-0.333,0.109-0.488,0.125c-0.303-0.422-0.283-0.633-0.869-0.649c-0.234,0.251-0.508,0.626-0.634,1.009   c-0.195,0.579-0.059,0.18-0.039,0.805c-0.01,0.024,0,0.055,0,0.079c-0.01,0.375-0.098-0.071-0.039,0.274   c0.459-0.094,0.108-0.086,0.45-0.196c0.322-0.11,1.309-0.407,1.592-0.336C44.039,18.868,44.606,19.401,45.367,18.868z"></path>
@@ -32,6 +33,7 @@
       directly for you - while also saving you time and reducing your
       CO<sub>2</sub> emissions!
     </p>
+
   </div>
   <footer class='footer'>
     <small>
