options edit redirects as div contenteditable
also updated get database/redirects in baqckground

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -22,12 +22,13 @@
         <p class="label">
           Edit redirects:
         </p>
-        <textarea id="redirect-textarea" rows="26" cols="80"></textarea>
+        <div contenteditable id="redirects-text" rows="26" cols="80"></div>
       </div>
       <br />
 
       <!-- Save -->
       <div id="status"></div>
+      <br />
       <button id="save">Save</button>
 
     </div>
