redirects options as textarea

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -22,7 +22,7 @@
         <p class="label">
           Edit redirects:
         </p>
-        <div contenteditable id="redirects-text" rows="26" cols="80"></div>
+        <textarea id="redirects-text" rows="26" cols="80"></textarea>
       </div>
       <br />
 
