Shorten consent text and add ressource

--- a/source/options/options.html
+++ b/source/options/options.html
@@ -12,7 +12,7 @@
       <!-- Statistics Consent -->
       <div class="stats-consent">
         <label>
-          Do you consent to sharing how much carbon you saved?
+          Do you consent to share your carbon savings?
           <input type="checkbox" id="stats-checkbox">
         </label>
       </div>
